# TU1SimCSeibt

./: cmake.sh
STL/: solid.stl  solidold.stl
Sktipte-Sammlung/: README.md
Sktipte-Sammlung/evaluation skripts/: Analyze_discrete.C  Analyze_nuclide.C  FitEfficiency.C  Measurement_data.txt  PlotSimVsMeas.C
Sktipte-Sammlung/macros/: README.md  runIsotopes-Nuclide.mac  runIsotopes-Volume.mac
Sktipte-Sammlung/selbstabsorbtionskorrektur/: Korr.C  runSim.sh  runSim.sh~
backup/: PrimaryGeneratorAction_backup.cc  PrimaryGeneratorAction_backup.hh  TrackingAction_backup.cc  TrackingAction_backup.hh
mac/: defaultGeometryInit.mac  defaultGeometryInitoriginal.mac  defaultRun.mac  preInit.mac  vis.mac
optivalues/: optivalues_CapDistance.C  optivalues_CapThickness.C  optivalues_TotalEfficiency.C
optivalues/CapDistance_allenergies/: absVollenergieansprechvermögen_0cm_exp.txt  absVollenergieansprechvermögen_0cm_exp_inklAm.txt  absVollenergieansprechvermögen_0cm_sim_5.2.txt  absVollenergieansprechvermögen_0cm_sim_5.7.txt  absVollenergieansprechvermögen_0cm_sim_6.0.txt  absVollenergieansprechvermögen_0cm_sim_6.5.txt  absVollenergieansprechvermögen_0cm_sim_7.0.txt  absVollenergieansprechvermögen_0cm_sim_7.5.txt  absVollenergieansprechvermögen_0cm_sim_7.73.txt  absVollenergieansprechvermögen_0cm_sim_8.0.txt  absVollenergieansprechvermögen_0cm_sim_8.5.txt  absVollenergieansprechvermögen_14cm_exp.txt  absVollenergieansprechvermögen_14cm_exp_inklAm.txt  (+10 more)
source/: CMakeLists.txt  TU1.cc
source/include/: ActionInitialization.hh  CADmesh.hh  DetectorConstruction.hh  DetectorResponse.hh  EventAction.hh  GeometryObject.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  TrackingAction.hh
source/include/geometry/: HfSample.hh  Materials.hh  PENSample.hh  RockSample.hh  Shielding.hh  TU1Detector.hh
source/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorResponse.cc  EventAction.cc  GeometryObject.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  TrackingAction.cc
source/src/geometry/: HfSample.cc  Materials.cc  PENSample.cc  RockSample.cc  Shielding.cc  TU1Detector.cc  tets.cpp
(+41 files in other folders)
